[explorer/frontend] fix: layout issues on safari

--- a/explorer/frontend/styles/components/LineChart.module.scss
+++ b/explorer/frontend/styles/components/LineChart.module.scss
@@ -5,7 +5,6 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
 }
 
 .container {
